[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "p01441_build_array_with_stack_operations"
path = "src/bin/stack/p01441_build_array_with_stack_operations.rs"

[[bin]]
name = "p0150_evaluate_reverse_polish_notation"
path = "src/bin/stack/p0150_evaluate_reverse_polish_notation.rs"

[[bin]]
name = "p0636_exclusive_time_of_functions"
path = "src/bin/stack/p0636_exclusive_time_of_functions.rs"

[[bin]]
name = "p0448_find_all_numbers_disappeared_in_an_array"
path = "src/bin/array/p0448_find_all_numbers_disappeared_in_an_array.rs"

[[bin]]
name = "p1475_final_prices_with_a_special_discount_in_a_shop"
path = "src/bin/stack/p1475_final_prices_with_a_special_discount_in_a_shop.rs"
